--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,11 +1,11 @@
+language: generic
 sudo: required
+
 services:
-    - docker
+  - docker
 
 before_install:
-    - docker build -t matrixul/docker-react -f Dockerfile.dev .
+  - docker build -t matrixul/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true matrixul/docker-react npm run test -- --coverage
-      
-language: generic  
+  - docker run -e CI=true matrixul/docker-react npm run test
